--- a/style/style.css
+++ b/style/style.css
@@ -18,6 +18,7 @@
 
 .title{
   text-align: center;
+  /* color: #8bc34a; */
 }
 
 .mdl-card{
@@ -25,10 +26,6 @@
 }
 .player-list .mdl-list__item{
   margin-top: 5px;
-}
-
-.player-creation{
-  
 }
 
 h1{
@@ -55,3 +52,7 @@ h3{
   }
 }
 
+
+.mdl-layout{
+  background-color: white;
+}
